Clang: Fix language version detection with PCH-s in CMake enabled

Filter out the PCH flags when detecting macros and language version.

Fixes: QTCREATORBUG-21860
Change-Id: I25c63f1409c16db3623d1c8f43ffd5d2bd0f6748
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Marco Bubke <marco.bubke@qt.io>